--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:seed": "tsx ./src/scripts/seed.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.0",
     "@next/third-parties": "^15.3.5",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -18,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@types/rss": "^0.0.32",
+    "ai": "^5.0.0",
     "better-auth": "^1.3.4",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
@@ -34,7 +36,8 @@
     "react-syntax-highlighter": "^15.6.1",
     "rss": "^1.2.2",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
